// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`printing ballots, print report, and test decks 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="sc-bdfBwQ eVNwUy"
  >
    <div
      class="sc-hKgILt ciSCwP"
    >
      <div
        class="sc-eCssSg evawvT"
      >
        <div
          class="sc-jSgupP ioUXLm"
        >
          Voting
          <span>
            Works
          </span>
        </div>
        <div
          class="sc-gKsewC"
        >
          Election Manager
        </div>
      </div>
      <div
        class="sc-iBPRYJ fVzTCx"
      >
        <button
          class="sc-jrAGrp hAHAue"
          role="option"
          type="button"
        >
          Definition
        </button>
        <button
          class="sc-jrAGrp hAHAue"
          role="option"
          type="button"
        >
          Ballots
        </button>
        <button
          class="sc-jrAGrp iWxjsY active-section"
          role="option"
          type="button"
        >
          Tally
        </button>
      </div>
      <div
        class="sc-fubCfw kBiVZq"
      >
        <button
          class="sc-jrAGrp iWxjsY"
          type="button"
        >
          Eject USB
        </button>
      </div>
    </div>
    <main
      class="sc-gsTCUz hqEESM"
    >
      <div
        class="sc-dlfnbm kzZCED"
      >
        <div
          class="sc-hBEYos huCICJ"
        >
          <h1>
            Test Deck
          </h1>
          <p>
            <strong>
              Election:
            </strong>
             
            Mock General Election Choctaw 2020
            <br />
            <strong>
              Precinct:
            </strong>
             
            District 5
          </p>
          <p>
            <button
              class="sc-jrAGrp cvGifY"
              type="button"
            >
              Print Test Deck
            </button>
          </p>
          <p>
            <button
              class="sc-jrAGrp iWxjsY"
              role="option"
              type="button"
            >
              Back to Test Deck list
            </button>
          </p>
        </div>
      </div>
    </main>
    <div
      class="sc-kstrdz hFgVdI"
    >
      <div
        class="sc-crrsfI KbGmM"
      >
        <strong>
          Mock General Election Choctaw 2020
        </strong>
         — 
        Wednesday, August 26, 2020
         —
         
        Choctaw County
        , 
        State of Mississippi
         
      </div>
      <div
        class="sc-crrsfI KbGmM"
      >
        Election Hash: 
        <strong>
          6bdcd6d885
        </strong>
      </div>
    </div>
  </div>
  <div
    class="print-only"
  >
    <div>
      <h1>
        Mocked HMPB
      </h1>
      Election: 
      Mock General Election Choctaw 2020
      <br />
      Ballot Style 
      5
      , precinct 
      6522
      .
    </div>
    <div>
      <h1>
        Mocked HMPB
      </h1>
      Election: 
      Mock General Election Choctaw 2020
      <br />
      Ballot Style 
      5
      , precinct 
      6522
      .
    </div>
    <div>
      <h1>
        Mocked HMPB
      </h1>
      Election: 
      Mock General Election Choctaw 2020
      <br />
      Ballot Style 
      5
      , precinct 
      6522
      .
    </div>
  </div>
  <div />
</div>
`;

exports[`printing ballots, print report, and test decks 2`] = `
<div>
  <div
    class="sc-bdfBwQ eVNwUy"
  >
    <div
      class="sc-hKgILt ciSCwP"
    >
      <div
        class="sc-eCssSg evawvT"
      >
        <div
          class="sc-jSgupP ioUXLm"
        >
          Voting
          <span>
            Works
          </span>
        </div>
        <div
          class="sc-gKsewC"
        >
          Election Manager
        </div>
      </div>
      <div
        class="sc-iBPRYJ fVzTCx"
      >
        <button
          class="sc-jrAGrp hAHAue"
          role="option"
          type="button"
        >
          Definition
        </button>
        <button
          class="sc-jrAGrp hAHAue"
          role="option"
          type="button"
        >
          Ballots
        </button>
        <button
          class="sc-jrAGrp iWxjsY active-section"
          role="option"
          type="button"
        >
          Tally
        </button>
      </div>
      <div
        class="sc-fubCfw kBiVZq"
      >
        <button
          class="sc-jrAGrp iWxjsY"
          type="button"
        >
          Eject USB
        </button>
      </div>
    </div>
    <main
      class="sc-gsTCUz hqEESM"
    >
      <div
        class="sc-dlfnbm kzZCED"
      >
        <div>
          <strong>
            Test Ballot Deck Tally
          </strong>
           for 
          Mock General Election Choctaw 2020
        </div>
        <div
          class="sc-hBEYos huCICJ"
        >
          <h1
            class="sc-gWHgXt gJhtxk"
            style="margin-bottom: 0.75em; margin-top: 0.25em;"
          >
            
             Tally Report for
             
            <strong>
              All Precincts
            </strong>
          </h1>
          <p>
            Wednesday, August 26, 2020
            , 
            Choctaw County
            , 
            State of Mississippi
            <br />
            <span
              class="sc-crrsfI XvqqD"
            >
              This report was created on 
              Tuesday, November 3, 2020, 10:22:00 PM PST
            </span>
          </p>
          <p>
            <button
              class="sc-jrAGrp cvGifY"
              type="button"
            >
              Print Results Report
            </button>
          </p>
          <p>
            <button
              class="sc-jrAGrp hAHAue"
              type="button"
            >
              Save Results Report as PDF
            </button>
          </p>
          <p>
            <button
              class="sc-jrAGrp iWxjsY"
              role="option"
              type="button"
            >
              Back to Test Deck list
            </button>
          </p>
        </div>
      </div>
    </main>
    <div
      class="sc-kstrdz hFgVdI"
    >
      <div
        class="sc-crrsfI KbGmM"
      >
        <strong>
          Mock General Election Choctaw 2020
        </strong>
         — 
        Wednesday, August 26, 2020
         —
         
        Choctaw County
        , 
        State of Mississippi
         
      </div>
      <div
        class="sc-crrsfI KbGmM"
      >
        Election Hash: 
        <strong>
          6bdcd6d885
        </strong>
      </div>
    </div>
  </div>
  <div
    class="print-only"
  >
    <section
      class="sc-bZSQDF TTaBN"
    >
      <img
        alt="VotingWorks logo"
        class="sc-hiSbYr oqDre"
        src="/votingworks-wordmark-black.svg"
      />
      <div>
        <strong>
          Test Ballot Deck Tally
        </strong>
         for 
         Mock General Election Choctaw 2020
      </div>
      <div
        class="sc-hBEYos dSqeuO"
      >
        <h1
          class="sc-gWHgXt gJhtxk"
          style="margin-bottom: 0.75em; margin-top: 0.25em;"
        >
          
           Tally Report for
           
          <strong>
            All Precincts
          </strong>
        </h1>
        <p>
          Wednesday, August 26, 2020
          , 
          Choctaw County
          , 
          State of Mississippi
          <br />
          <span
            class="sc-crrsfI XvqqD"
          >
            This report was created on 
            Tuesday, November 3, 2020, 10:22:00 PM PST
          </span>
        </p>
      </div>
      <div
        class="sc-cBNfnY hAQPSL"
      >
        <div
          class="sc-iktFzd dUYsQU"
        >
          <div
            class="sc-hBEYos dSqeuO"
          >
            <p
              class="sc-crrsfI XvqqD"
            >
              United States
            </p>
            <h3>
              President
            </h3>
            <p
              class="sc-crrsfI XvqqD"
            >
              <span
                class="sc-dQppl bmnKdH"
              >
                39 ballots
                 cast /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-idOhPF coA-DTg"
            >
              <tbody>
                <tr>
                  <td>
                    Presidential Electors for Joe Biden for President and Kamala Harris for Vice President
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    13
                  </td>
                </tr>
                <tr>
                  <td>
                    Presidential Electors for Donald J. Trump for President and Michael R. Pence for Vice President
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    13
                  </td>
                </tr>
                <tr>
                  <td>
                    Presidential Electors for Phil Collins for President and Bill Parker for Vice President
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    13
                  </td>
                </tr>
                <tr>
                  <td>
                    Write-In
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-iktFzd dUYsQU"
        >
          <div
            class="sc-hBEYos dSqeuO"
          >
            <p
              class="sc-crrsfI XvqqD"
            >
              United States
            </p>
            <h3>
              Senate 
            </h3>
            <p
              class="sc-crrsfI XvqqD"
            >
              <span
                class="sc-dQppl bmnKdH"
              >
                39 ballots
                 cast /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-idOhPF coA-DTg"
            >
              <tbody>
                <tr>
                  <td>
                    Mike Espy
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    13
                  </td>
                </tr>
                <tr>
                  <td>
                    Cindy Hyde-Smith
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    13
                  </td>
                </tr>
                <tr>
                  <td>
                    Jimmy Edwards
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    13
                  </td>
                </tr>
                <tr>
                  <td>
                    Write-In
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-iktFzd dUYsQU"
        >
          <div
            class="sc-hBEYos dSqeuO"
          >
            <p
              class="sc-crrsfI XvqqD"
            >
              US House Of Representatives
            </p>
            <h3>
              1st Congressional District
            </h3>
            <p
              class="sc-crrsfI XvqqD"
            >
              <span
                class="sc-dQppl bmnKdH"
              >
                39 ballots
                 cast /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-idOhPF coA-DTg"
            >
              <tbody>
                <tr>
                  <td>
                    Antonia Eliason
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    26
                  </td>
                </tr>
                <tr>
                  <td>
                    Trent Kelly
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    13
                  </td>
                </tr>
                <tr>
                  <td>
                    Write-In
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-iktFzd dUYsQU"
        >
          <div
            class="sc-hBEYos dSqeuO"
          >
            <p
              class="sc-crrsfI XvqqD"
            >
              Northern District
            </p>
            <h3>
              Supreme Court District 3(Northern) Position 3
            </h3>
            <p
              class="sc-crrsfI XvqqD"
            >
              <span
                class="sc-dQppl bmnKdH"
              >
                39 ballots
                 cast /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-idOhPF coA-DTg"
            >
              <tbody>
                <tr>
                  <td>
                    Josiah Dennis Coleman
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    26
                  </td>
                </tr>
                <tr>
                  <td>
                    Percy L. Lynchard
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    13
                  </td>
                </tr>
                <tr>
                  <td>
                    Write-In
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-iktFzd dUYsQU"
        >
          <div
            class="sc-hBEYos dSqeuO"
          >
            <p
              class="sc-crrsfI XvqqD"
            >
              Election Commissioner 01
            </p>
            <h3>
              Election Commissioner  01
            </h3>
            <p
              class="sc-crrsfI XvqqD"
            >
              <span
                class="sc-dQppl bmnKdH"
              >
                9 ballots
                 cast /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-idOhPF coA-DTg"
            >
              <tbody>
                <tr>
                  <td>
                    Glynda Chaney Fulce
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    9
                  </td>
                </tr>
                <tr>
                  <td>
                    Write-In
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-iktFzd dUYsQU"
        >
          <div
            class="sc-hBEYos dSqeuO"
          >
            <p
              class="sc-crrsfI XvqqD"
            >
              Election Commissioner 02
            </p>
            <h3>
              Election Commissioner 02
            </h3>
            <p
              class="sc-crrsfI XvqqD"
            >
              <span
                class="sc-dQppl bmnKdH"
              >
                9 ballots
                 cast /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-idOhPF coA-DTg"
            >
              <tbody>
                <tr>
                  <td>
                    Charles Beck
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    6
                  </td>
                </tr>
                <tr>
                  <td>
                    Sharon Brooks
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    3
                  </td>
                </tr>
                <tr>
                  <td>
                    Write-In
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-iktFzd dUYsQU"
        >
          <div
            class="sc-hBEYos dSqeuO"
          >
            <p
              class="sc-crrsfI XvqqD"
            >
              Election Commissioner 03
            </p>
            <h3>
              Election Commissioner 03
            </h3>
            <p
              class="sc-crrsfI XvqqD"
            >
              <span
                class="sc-dQppl bmnKdH"
              >
                9 ballots
                 cast /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-idOhPF coA-DTg"
            >
              <tbody>
                <tr>
                  <td>
                    Dorothy Anderson
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    9
                  </td>
                </tr>
                <tr>
                  <td>
                    Write-In
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-iktFzd dUYsQU"
        >
          <div
            class="sc-hBEYos dSqeuO"
          >
            <p
              class="sc-crrsfI XvqqD"
            >
              Election Commissioner 04
            </p>
            <h3>
              Election Commissioner 04
            </h3>
            <p
              class="sc-crrsfI XvqqD"
            >
              <span
                class="sc-dQppl bmnKdH"
              >
                9 ballots
                 cast /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-idOhPF coA-DTg"
            >
              <tbody>
                <tr>
                  <td>
                    Willie Mae Guillory
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    6
                  </td>
                </tr>
                <tr>
                  <td>
                    Lewis Wright
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    3
                  </td>
                </tr>
                <tr>
                  <td>
                    Write-In
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-iktFzd dUYsQU"
        >
          <div
            class="sc-hBEYos dSqeuO"
          >
            <p
              class="sc-crrsfI XvqqD"
            >
              Election Commissioner 05
            </p>
            <h3>
              Election Commissioner 05
            </h3>
            <p
              class="sc-crrsfI XvqqD"
            >
              <span
                class="sc-dQppl bmnKdH"
              >
                3 ballots
                 cast /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-idOhPF coA-DTg"
            >
              <tbody>
                <tr>
                  <td>
                    Ouida A Loper
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    2
                  </td>
                </tr>
                <tr>
                  <td>
                    Wayne McLeod
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    1
                  </td>
                </tr>
                <tr>
                  <td>
                    Write-In
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-iktFzd dUYsQU"
        >
          <div
            class="sc-hBEYos dSqeuO"
          >
            <p
              class="sc-crrsfI XvqqD"
            >
              School Board District 5
            </p>
            <h3>
              School Board 05
            </h3>
            <p
              class="sc-crrsfI XvqqD"
            >
              <span
                class="sc-dQppl bmnKdH"
              >
                3 ballots
                 cast /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-idOhPF coA-DTg"
            >
              <tbody>
                <tr>
                  <td>
                    Michael D Thomas
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    3
                  </td>
                </tr>
                <tr>
                  <td>
                    Write-In
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-iktFzd dUYsQU"
        >
          <div
            class="sc-hBEYos dSqeuO"
          >
            <p
              class="sc-crrsfI XvqqD"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 2
House Concurrent Resolution No. 47
            </h3>
            <p
              class="sc-crrsfI XvqqD"
            >
              <span
                class="sc-dQppl bmnKdH"
              >
                39 ballots
                 cast /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-idOhPF coA-DTg"
            >
              <tbody>
                <tr>
                  <td>
                    YES
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    26
                  </td>
                </tr>
                <tr>
                  <td>
                    NO
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    13
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-iktFzd dUYsQU"
        >
          <div
            class="sc-hBEYos dSqeuO"
          >
            <p
              class="sc-crrsfI XvqqD"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 3
House Bill 1796 - Flag Referendum
            </h3>
            <p
              class="sc-crrsfI XvqqD"
            >
              <span
                class="sc-dQppl bmnKdH"
              >
                39 ballots
                 cast /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-idOhPF coA-DTg"
            >
              <tbody>
                <tr>
                  <td>
                    YES
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    26
                  </td>
                </tr>
                <tr>
                  <td>
                    NO
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    13
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-iktFzd dUYsQU"
        >
          <div
            class="sc-hBEYos dSqeuO"
          >
            <p
              class="sc-crrsfI XvqqD"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 1 – Either/Neither
            </h3>
            <p
              class="sc-crrsfI XvqqD"
            >
              <span
                class="sc-dQppl bmnKdH"
              >
                39 ballots
                 cast /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-idOhPF coA-DTg"
            >
              <tbody>
                <tr>
                  <td>
                    FOR APPROVAL OF EITHER Initiative No. 65 OR Alternative Measure No. 65 A
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    26
                  </td>
                </tr>
                <tr>
                  <td>
                    AGAINST BOTH Initiative Measure No. 65 AND Alternative Measure No. 65 A
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    13
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="sc-iktFzd dUYsQU"
        >
          <div
            class="sc-hBEYos dSqeuO"
          >
            <p
              class="sc-crrsfI XvqqD"
            >
              State Of Mississippi
            </p>
            <h3>
              Ballot Measure 1 – Pick One
            </h3>
            <p
              class="sc-crrsfI XvqqD"
            >
              <span
                class="sc-dQppl bmnKdH"
              >
                39 ballots
                 cast /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 overvotes
                 /
              </span>
               
              <span
                class="sc-dQppl bmnKdH"
              >
                0 undervotes
              </span>
            </p>
            <table
              class="sc-idOhPF coA-DTg"
            >
              <tbody>
                <tr>
                  <td>
                    FOR Initiative Measure No. 65
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    26
                  </td>
                </tr>
                <tr>
                  <td>
                    FOR Alternative Measure 65 A
                  </td>
                  <td
                    class="sc-dIUggk eLNEQI"
                  >
                    13
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </section>
  </div>
  <div />
</div>
`;

exports[`tabulating CVRs 1`] = `
<section
  class="sc-bZSQDF TTaBN"
  data-testid="election-full-tally-report"
>
  <img
    alt="VotingWorks logo"
    class="sc-hiSbYr oqDre"
    src="/votingworks-wordmark-black.svg"
  />
  <div
    class="sc-hBEYos dSqeuO"
  >
    <h1>
      Official
       
      Mock General Election Choctaw 2020
       Tally Report
    </h1>
    <p>
      Wednesday, August 26, 2020
      , 
      Choctaw County
      , 
      State of Mississippi
      <br />
      <span
        class="sc-crrsfI XvqqD"
      >
        This report was created on 
        Tuesday, November 3, 2020, 10:22:00 PM PST
      </span>
    </p>
  </div>
  <div
    class="sc-cBNfnY hAQPSL"
  >
    <div
      class="sc-jJEJSO leXJRU"
    >
      <h3>
        Ballots by Voting Method
      </h3>
      <table
        class="sc-idOhPF hqmYtt"
        data-testid="voting-method-table"
      >
        <tbody>
          <tr
            data-testid="absentee"
          >
            <td
              class="sc-dIUggk fMFRds"
            >
              Absentee
            </td>
            <td
              class="sc-dIUggk grVjzA"
            >
              50
            </td>
          </tr>
          <tr
            data-testid="standard"
          >
            <td
              class="sc-dIUggk fMFRds"
            >
              Precinct
            </td>
            <td
              class="sc-dIUggk grVjzA"
            >
              50
            </td>
          </tr>
          <tr
            data-testid="total"
          >
            <td
              class="sc-dIUggk fMFRds"
            >
              <strong>
                Total Ballots Cast
              </strong>
            </td>
            <td
              class="sc-dIUggk grVjzA"
            >
              <strong>
                100
              </strong>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          United States
        </p>
        <h3>
          President
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            100 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            1 overvote
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            7 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                Presidential Electors for Joe Biden for President and Kamala Harris for Vice President
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                27
              </td>
            </tr>
            <tr>
              <td>
                Presidential Electors for Donald J. Trump for President and Michael R. Pence for Vice President
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                36
              </td>
            </tr>
            <tr>
              <td>
                Presidential Electors for Phil Collins for President and Bill Parker for Vice President
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                29
              </td>
            </tr>
            <tr>
              <td>
                Write-In
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          United States
        </p>
        <h3>
          Senate 
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            100 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            4 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            4 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                Mike Espy
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                29
              </td>
            </tr>
            <tr>
              <td>
                Cindy Hyde-Smith
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                35
              </td>
            </tr>
            <tr>
              <td>
                Jimmy Edwards
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                28
              </td>
            </tr>
            <tr>
              <td>
                Write-In
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          US House Of Representatives
        </p>
        <h3>
          1st Congressional District
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            100 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            3 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            5 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                Antonia Eliason
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                46
              </td>
            </tr>
            <tr>
              <td>
                Trent Kelly
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                46
              </td>
            </tr>
            <tr>
              <td>
                Write-In
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          Northern District
        </p>
        <h3>
          Supreme Court District 3(Northern) Position 3
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            100 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            0 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            5 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                Josiah Dennis Coleman
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                37
              </td>
            </tr>
            <tr>
              <td>
                Percy L. Lynchard
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                58
              </td>
            </tr>
            <tr>
              <td>
                Write-In
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          Election Commissioner 01
        </p>
        <h3>
          Election Commissioner  01
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            18 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            0 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            1 undervote
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                Glynda Chaney Fulce
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                17
              </td>
            </tr>
            <tr>
              <td>
                Write-In
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          Election Commissioner 02
        </p>
        <h3>
          Election Commissioner 02
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            15 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            0 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            1 undervote
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                Charles Beck
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                5
              </td>
            </tr>
            <tr>
              <td>
                Sharon Brooks
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                9
              </td>
            </tr>
            <tr>
              <td>
                Write-In
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          Election Commissioner 03
        </p>
        <h3>
          Election Commissioner 03
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            23 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            0 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            1 undervote
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                Dorothy Anderson
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                22
              </td>
            </tr>
            <tr>
              <td>
                Write-In
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          Election Commissioner 04
        </p>
        <h3>
          Election Commissioner 04
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            25 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            1 overvote
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            0 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                Willie Mae Guillory
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                10
              </td>
            </tr>
            <tr>
              <td>
                Lewis Wright
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                14
              </td>
            </tr>
            <tr>
              <td>
                Write-In
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          Election Commissioner 05
        </p>
        <h3>
          Election Commissioner 05
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            19 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            2 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            2 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                Ouida A Loper
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                9
              </td>
            </tr>
            <tr>
              <td>
                Wayne McLeod
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                6
              </td>
            </tr>
            <tr>
              <td>
                Write-In
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          School Board District 5
        </p>
        <h3>
          School Board 05
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            19 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            0 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            0 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                Michael D Thomas
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                19
              </td>
            </tr>
            <tr>
              <td>
                Write-In
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          State Of Mississippi
        </p>
        <h3>
          Ballot Measure 2
House Concurrent Resolution No. 47
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            100 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            2 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            5 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                YES
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                40
              </td>
            </tr>
            <tr>
              <td>
                NO
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                53
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          State Of Mississippi
        </p>
        <h3>
          Ballot Measure 3
House Bill 1796 - Flag Referendum
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            100 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            3 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            2 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                YES
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                43
              </td>
            </tr>
            <tr>
              <td>
                NO
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                52
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          State Of Mississippi
        </p>
        <h3>
          Ballot Measure 1 – Either/Neither
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            98 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            3 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            3 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                FOR APPROVAL OF EITHER Initiative No. 65 OR Alternative Measure No. 65 A
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                39
              </td>
            </tr>
            <tr>
              <td>
                AGAINST BOTH Initiative Measure No. 65 AND Alternative Measure No. 65 A
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                53
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          State Of Mississippi
        </p>
        <h3>
          Ballot Measure 1 – Pick One
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            98 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            4 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            5 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                FOR Initiative Measure No. 65
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                40
              </td>
            </tr>
            <tr>
              <td>
                FOR Alternative Measure 65 A
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                49
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</section>
`;

exports[`tabulating CVRs with SEMS file 1`] = `
<section
  class="sc-bZSQDF TTaBN"
  data-testid="election-full-tally-report"
>
  <img
    alt="VotingWorks logo"
    class="sc-hiSbYr oqDre"
    src="/votingworks-wordmark-black.svg"
  />
  <div
    class="sc-hBEYos dSqeuO"
  >
    <h1>
      Unofficial
       
      Mock General Election Choctaw 2020
       Tally Report
    </h1>
    <p>
      Wednesday, August 26, 2020
      , 
      Choctaw County
      , 
      State of Mississippi
      <br />
      <span
        class="sc-crrsfI XvqqD"
      >
        This report was created on 
        Tuesday, November 3, 2020, 10:22:00 PM PST
      </span>
    </p>
  </div>
  <div
    class="sc-cBNfnY hAQPSL"
  >
    <div
      class="sc-jJEJSO leXJRU"
    >
      <h3>
        Ballots by Voting Method
      </h3>
      <table
        class="sc-idOhPF hqmYtt"
        data-testid="voting-method-table"
      >
        <tbody>
          <tr
            data-testid="absentee"
          >
            <td
              class="sc-dIUggk fMFRds"
            >
              Absentee
            </td>
            <td
              class="sc-dIUggk grVjzA"
            >
              50
            </td>
          </tr>
          <tr
            data-testid="standard"
          >
            <td
              class="sc-dIUggk fMFRds"
            >
              Precinct
            </td>
            <td
              class="sc-dIUggk grVjzA"
            >
              150
            </td>
          </tr>
          <tr
            data-testid="total"
          >
            <td
              class="sc-dIUggk fMFRds"
            >
              <strong>
                Total Ballots Cast
              </strong>
            </td>
            <td
              class="sc-dIUggk grVjzA"
            >
              <strong>
                200
              </strong>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          United States
        </p>
        <h3>
          President
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            200 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            2 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            14 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                Presidential Electors for Joe Biden for President and Kamala Harris for Vice President
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                54
              </td>
            </tr>
            <tr>
              <td>
                Presidential Electors for Donald J. Trump for President and Michael R. Pence for Vice President
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                72
              </td>
            </tr>
            <tr>
              <td>
                Presidential Electors for Phil Collins for President and Bill Parker for Vice President
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                58
              </td>
            </tr>
            <tr>
              <td>
                Write-In
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          United States
        </p>
        <h3>
          Senate 
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            200 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            8 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            8 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                Mike Espy
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                58
              </td>
            </tr>
            <tr>
              <td>
                Cindy Hyde-Smith
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                70
              </td>
            </tr>
            <tr>
              <td>
                Jimmy Edwards
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                56
              </td>
            </tr>
            <tr>
              <td>
                Write-In
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          US House Of Representatives
        </p>
        <h3>
          1st Congressional District
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            200 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            6 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            10 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                Antonia Eliason
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                92
              </td>
            </tr>
            <tr>
              <td>
                Trent Kelly
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                92
              </td>
            </tr>
            <tr>
              <td>
                Write-In
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          Northern District
        </p>
        <h3>
          Supreme Court District 3(Northern) Position 3
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            200 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            0 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            10 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                Josiah Dennis Coleman
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                74
              </td>
            </tr>
            <tr>
              <td>
                Percy L. Lynchard
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                116
              </td>
            </tr>
            <tr>
              <td>
                Write-In
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          Election Commissioner 01
        </p>
        <h3>
          Election Commissioner  01
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            36 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            0 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            2 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                Glynda Chaney Fulce
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                34
              </td>
            </tr>
            <tr>
              <td>
                Write-In
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          Election Commissioner 02
        </p>
        <h3>
          Election Commissioner 02
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            30 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            0 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            2 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                Charles Beck
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                10
              </td>
            </tr>
            <tr>
              <td>
                Sharon Brooks
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                18
              </td>
            </tr>
            <tr>
              <td>
                Write-In
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          Election Commissioner 03
        </p>
        <h3>
          Election Commissioner 03
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            46 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            0 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            2 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                Dorothy Anderson
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                44
              </td>
            </tr>
            <tr>
              <td>
                Write-In
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          Election Commissioner 04
        </p>
        <h3>
          Election Commissioner 04
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            50 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            2 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            0 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                Willie Mae Guillory
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                20
              </td>
            </tr>
            <tr>
              <td>
                Lewis Wright
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                28
              </td>
            </tr>
            <tr>
              <td>
                Write-In
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          Election Commissioner 05
        </p>
        <h3>
          Election Commissioner 05
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            38 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            4 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            4 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                Ouida A Loper
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                18
              </td>
            </tr>
            <tr>
              <td>
                Wayne McLeod
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                12
              </td>
            </tr>
            <tr>
              <td>
                Write-In
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          School Board District 5
        </p>
        <h3>
          School Board 05
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            38 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            0 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            0 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                Michael D Thomas
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                38
              </td>
            </tr>
            <tr>
              <td>
                Write-In
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          State Of Mississippi
        </p>
        <h3>
          Ballot Measure 2
House Concurrent Resolution No. 47
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            200 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            4 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            10 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                YES
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                80
              </td>
            </tr>
            <tr>
              <td>
                NO
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                106
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          State Of Mississippi
        </p>
        <h3>
          Ballot Measure 3
House Bill 1796 - Flag Referendum
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            200 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            6 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            4 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                YES
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                86
              </td>
            </tr>
            <tr>
              <td>
                NO
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                104
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          State Of Mississippi
        </p>
        <h3>
          Ballot Measure 1 – Either/Neither
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            196 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            6 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            6 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                FOR APPROVAL OF EITHER Initiative No. 65 OR Alternative Measure No. 65 A
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                78
              </td>
            </tr>
            <tr>
              <td>
                AGAINST BOTH Initiative Measure No. 65 AND Alternative Measure No. 65 A
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                106
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="sc-iktFzd dUYsQU"
    >
      <div
        class="sc-hBEYos dSqeuO"
      >
        <p
          class="sc-crrsfI XvqqD"
        >
          State Of Mississippi
        </p>
        <h3>
          Ballot Measure 1 – Pick One
        </h3>
        <p
          class="sc-crrsfI XvqqD"
        >
          <span
            class="sc-dQppl bmnKdH"
          >
            196 ballots
             cast /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            8 overvotes
             /
          </span>
           
          <span
            class="sc-dQppl bmnKdH"
          >
            10 undervotes
          </span>
        </p>
        <table
          class="sc-idOhPF coA-DTg"
        >
          <tbody>
            <tr>
              <td>
                FOR Initiative Measure No. 65
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                80
              </td>
            </tr>
            <tr>
              <td>
                FOR Alternative Measure 65 A
              </td>
              <td
                class="sc-dIUggk eLNEQI"
              >
                98
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</section>
`;
